exports[`base rendering tests renders correctly App with default Styled 1`] = `
<div
  className="div-8-0-8">
  <header
    className="header-9-0-9">
    <h1
      className="h1-12-0-10">
      Title
    </h1>
  </header>
  <section
    className="section-10-0-11"
    data-name="content">
    <button
      className="button-13-0-12">
      primitive test
    </button>
    <button
      className="button-14-0-13">
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-11-0-14">
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with default styled 1`] = `
<div
  className="div-1-0-0">
  <header
    className="header-2-0-1">
    <h1
      className="h1-5-0-2">
      Title
    </h1>
  </header>
  <section
    className="section-3-0-3"
    data-name="content">
    <button
      className="button-6-0-4">
      primitive test
    </button>
    <button
      className="button-7-0-5">
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-4-0-6">
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with injectStyled 1`] = `
<div
  className="root-0-15">
  <div
    className="div-15-0-17">
    <header
      className="header-16-0-18">
      <h1
        className="h1-19-0-19">
        Title
      </h1>
    </header>
    <section
      className="section-17-0-20"
      data-name="content">
      <button
        className="button-20-0-21">
        primitive test
      </button>
      <button
        className="button-21-0-22">
        dynamic primitive test
      </button>
    </section>
    <section
      className="section-18-0-23">
      Another section
    </section>
  </div>
</div>
`;
